# hacksrm-26

./: README.md  docker-compose.yml
agents_backend/: .env  Dockerfile  README.md  langgraph.json  package-lock.json  pyproject.toml
agents_backend/data/call_transcripts/: playground-GEjK-kYkS.jsonl  playground-loTD-yQsy.jsonl  playground-vs2y-5Sly.jsonl  quiet-protocol-session-anurag.jsonl  quiet-protocol-session-bhkvbhhk.jsonl  quiet-protocol-session-bvhvbjh.jsonl  quiet-protocol-session-fj.jsonl  quiet-protocol-session-hgfhfgh.jsonl  quiet-protocol-session-huhuhu.jsonl  quiet-protocol-session-j.jsonl  quiet-protocol-session-jhb.jsonl  quiet-protocol-session-jhbhub.jsonl  quiet-protocol-session-pra.jsonl  quiet-protocol-session-shivangi.jsonl  quiet-protocol-session-xhegxh.jsonl
agents_backend/rag/: retrievers.py
agents_backend/scripts/: _python.sh  start_api.sh  start_worker.sh
agents_backend/src/agents/agent_info/: agent_info.json  prompts.py
agents_backend/src/agents/application/conversation_service/: generate_response.py
agents_backend/src/agents/domain/: philosopher_factory.py  prompts.py
agents_backend/src/agents/infrastructure/: api.py  rewards_service.py  token_server.py
agents_backend/src/smart_contract/: smart_contract.sol
agents_backend/tools/: livekit_multi_character.py  my_agent.py  send_room_control.py
agents_backend/workflow/: chains.py  edges.py  graph.py  nodes.py  tools.py
game/: .env.example  .gitignore  index.html  package-lock.json  package.json
game1/: index.html  package-lock.json
game_contract/: .env.example  README.md  (+3 more)
(+41 files in other folders)
